# hoshi

./: .gitignore  .ruff.toml  Dockerfile  LICENSE  README.md  TODO.md  ho.py  pyproject.toml
.github/workflows/: docker-publish.yml
scripts/: build_docker.sh
src/hoshi/: __init__.py  cli.py
src/hoshi/command/: annotate_taxonomic_lineage.py  annotation_single.py  contrast.py  enrich.py  generate_report.py  html_report.py  negative_contrast.py  report_multi.py  report_single.py  sankey_plot.py
src/hoshi/command/templates/: basic_report.html.j2  single_report.html.j2  table_page.html.j2
src/hoshi/lib/: ingress.py  sankey.py  taxdb.py
templates/: appendix.html  cover.html  disclaimer.html  layout.html  microbook.html  summary.html
test_data/: otu_table.biom  sample1.tsv  single_abs_abundance.tsv  single_rel_abundance.tsv
test_data/emu_output/: emu-mock01.tsv
test_data/emu_output/emudb_count/: barcode11.fastq_rel-abundance.tsv  barcode12.fastq_rel-abundance.tsv  barcode13.fastq_rel-abundance.tsv  barcode19.fastq_rel-abundance.tsv
test_data/emu_output/silva_count/: barcode11.fastq_rel-abundance.tsv  barcode12.fastq_rel-abundance.tsv  barcode13.fastq_rel-abundance.tsv  barcode19.fastq_rel-abundance.tsv
tests/: test_cli.py  test_ingress.py
