[project]
name = "hoshi"
version = "0.1.0"
authors = [{ name = "Your Name", email = "you@example.com" }]
description = "A flexible report generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dominate>=2.9.1",
    "pandas>=2.3.0",
    "playwright>=1.54.0",
    "plotly>=6.2.0",
    "taxopy>=0.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
hoshi = "hoshi.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["hoshi"]

