[project]
name = "hoshi"
version = "v0.1.0"
authors = [{ name = "Preecha", email = "preecha.pat@mahidol.ac.th" }]
description = "A flexible report generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pandas>=2.3.0",
    "playwright>=1.54.0",
    "plotly>=6.2.0",
    "taxopy>=0.14.0",
    "weasyprint>=66.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
hoshi = "hoshi.cli:main"
hoshi-report = "hoshi.command.report:main"
hoshi-summary = "hoshi.command.summary:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hoshi*"]

[tool.setuptools.package-data]
"hoshi.command" = ["templates/*.j2"]
